Provide API to set the secrets through a POST request.
